Apply maven formatter